tdf#144748 sw: fix crash at Undo of deletion with empty table rows

When a table with empty rows is part of a bigger deletion,
Undo of the deletion resulted a crash, because the deletion
created extra redlines for the empty rows within the bigger
redline.

Regression from commit 9994120c8d0fe8c5a029390ad7411b99c18ff5c9
"tdf#144347 sw: fix tracked deletion of table with tracked content".
See also commit 99059a1ececa3621c2fe46fabdd79eed9d626c42
"tdf#143359 sw: track deletion of empty table rows".

Change-Id: I0e33e169c1ffe60022a6b66a6d70fdd9c0a9332a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/123091
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>